# ng-diff

./: Cargo.toml  README.md
examples/: diff.rs  lcs.rs
src/: chars.rs  lib.rs  seq.rs
